<resources>
    <string name="app_name">DeckBox</string>
    <string name="app_description">Create and edit Pokémon Trading Card Game decks to share and compare with others in the community.</string>
    <string name="privacy_policy_url">https://deckboxtcg.app/privacy_policy.html</string>
    <string name="action_continue">or continue here</string>
    <string name="action_skip">Skip</string>
    <string name="action_next">Next</string>
    <string name="onboarding_title_search">Search</string>
    <string name="onboarding_subtitle_search">Browse and search Pokémon cards from every series of the trading card game.</string>
    <string name="onboarding_title_build">Build</string>
    <string name="onboarding_title_share">Share</string>
    <string name="onboarding_subtitle_build">Create and edit decks from scratch or start from a theme deck. Build until you find the right combination.</string>
    <string name="onboarding_subtitle_share">Find and share your deck online where others can comment and provide feedback to help you build a better deck</string>
    <string name="action_finish">Finish</string>
    <string name="tab_decks">Decks</string>
    <string name="tab_community">Community</string>
    <string name="tab_collection">Collection</string>
    <string name="tab_browse">Browse</string>
    <string name="empty_decks_message">You don\'t have any decks. Try creating one using the button below.</string>
    <string name="activity_deck_builder">New deck</string>
    <string name="tab_pokemon">Pokémon</string>
    <string name="tab_trainer">Trainer</string>
    <string name="tab_energy">Energy</string>
    <string name="empty_deckbuilder_message">Looks like you haven\'t added any cards yet. Click the add icon to find cards to add.</string>
    <string name="empty_search_category">Enter a term above to begin searching for cards</string>
    <string name="empty_search_results_category">No results could be found for that term. Please try another.</string>
    <string name="action_save">Save</string>
    <string name="action_undo">Undo</string>
    <string name="dropzone_message">Remove card</string>
    <string name="fragment_filter_title">Filter</string>
    <string name="filter_attributes_title">Attributes</string>
    <string name="filter_expansions_title">Expansions</string>
    <string name="filter_rarity_title">Rarity</string>
    <string name="filter_header_attributes">Attributes</string>
    <string name="filter_header_expansions">Expansions</string>
    <string name="filter_header_rarity">Rarity</string>
    <string name="filter_header_type">Type</string>
    <string name="filter_header_retreat_cost">Retreat cost</string>
    <string name="filter_header_attack_cost">Attack cost</string>
    <string name="filter_header_attack_damage">Attack damage</string>
    <string name="filter_header_weaknesses">Weaknesses</string>
    <string name="filter_header_resistances">Resistances</string>
    <string name="filter_viewmore_expanded">View expanded</string>
    <string name="filter_viewmore_all">View all</string>
    <string name="hint_deck_name_input">Deck name</string>
    <string name="hint_deck_description_input">Description</string>
    <string name="deckbuilder_default_title">New deck</string>
    <string name="deckbuilder_unsaved_changes_title">Unsaved changes</string>
    <string name="deckbuilder_unsaved_changes_message">Are you sure you want to discard all of your unsaved changes?</string>
    <string name="dialog_action_yes">Yes</string>
    <string name="dialog_action_no">No</string>
    <string name="deckbuilder_infobar_title">Details</string>
    <string name="empty_deck_pokemon_message">You haven\'t added any Pokémon cards yet!</string>
    <string name="empty_deck_trainer_message">You haven\'t added any Trainer cards yet!</string>
    <string name="empty_deck_energy_message">You haven\'t added any Energy cards yet!</string>
    <string name="action_settings">Settings</string>
    <string name="deckbuilder_saving_message">Saving…</string>
    <string name="deckbuilder_saved_message">Saved!</string>
    <string name="validation_rule_four_of_a_kind">You can only have 4 cards of the same name</string>
    <string name="validation_rule_max_size">A deck must contain exactly 60 cards</string>
    <string name="validation_rule_basic">A deck must contain at least one Basic Pokémon card</string>
    <string name="validation_rule_prism_star">You can\’t have more than 1 Prism Star card with the same name in your deck</string>
    <string name="format_standard">Standard</string>
    <string name="format_expanded">Expanded</string>
    <string name="action_export">Export as…</string>
    <string name="section_variants">Variants</string>
    <string name="section_evolves">Evolves from</string>
    <string name="activity_deck_export">Export</string>
    <string name="activity_deck_import">Import cards</string>
    <string name="action_share">Share</string>
    <string name="action_import">Import</string>
    <string name="hint_import_field"><![CDATA[
    <p>Paste your decklist from Pokemon Trading Card <br/>Game Online or other sources such as <br/>LimitlessTCG.com here…</p>
    <p>The items in your decklist must follow this format <br/>to import correctly otherwise it will be ignored.<p>
    <p><b>[COUNT]</b> <b>[CARD NAME]</b> <b>[SET CODE]</b> <b>[SET NUMBER]</b></p>
    <br/>
    <p>For example:</p>
    <i>Pokemon - 19</i>
    <p>
    4 Inkay FLI 50<br/>
    4 Malamar FLI 51<br/>
    2 Marshadow-GX BUS 80<br/>
    2 Deoxys CES 67<br/>
    1 Necrozma-GX BUS 63<br/>
    1 Dawn Wings Necrozma-GX UPR 63<br/>
    1 Mimikyu GRI 58<br/>
    1 Chimecho CIN 43<br/>
    1 Tapu Lele-GX GRI 60<br/>
    1 Marshadow SLG 45<br/>
    1 Oricorio GRI 55<br/>
    </p>
    ]]>
    </string>
    <string name="import_clipboard_found_message">Found a decklist in your clipboard. Would you like to paste it in now?</string>
    <string name="action_paste">Paste</string>
    <string name="invalid_decklist">Your decklist is invalid. Please check and try again.</string>
    <string name="activity_settings">Settings</string>
    <string name="pref_category_about">About</string>
    <string name="pref_about_version_title">Version</string>
    <string name="pref_about_oss_title">Open source licenses</string>
    <string name="pref_about_oss_summary">View the open source licenses used by DeckBox</string>
    <string name="pref_category_help">Help</string>
    <string name="pref_help_feedback_title">Feedback</string>
    <string name="pref_help_feedback_summary">Provided feedback on issues, features, etc.</string>
    <string name="pref_help_suggestions_title">Suggestions</string>
    <string name="pref_help_suggestions_summary">Submit any suggestions or improvements you might have</string>
    <string name="disclaimer">This application is not produced, endorsed, supported, or affiliated with Nintendo or The Pokémon Company.</string>
    <string name="support_email_address">support@deckboxtcg.app</string>
    <string name="developer_website_url">https://github.com/R0ADKLL</string>
    <string name="dropzone_add_message">Add Card</string>
    <string name="pref_category_account">Account</string>
    <string name="pref_account_signout">Sign out</string>
    <string name="user_anonymous_title">Anonymous</string>
    <string name="pref_account_link_title">Link your Google account</string>
    <string name="pref_account_link_summary">Link your account to save your Decks and share between your devices</string>
    <string name="action_clear_filter">Clear filter</string>
    <string name="image_loading_error">Error loading image</string>
    <string name="deckbuilder_edit_title">Edit deck</string>
    <string name="activity_licenses">Open source licenses</string>
    <string name="tablet_dropzone_message">Drop here to add Pokémon Card</string>
    <string name="action_copy">Copy</string>
    <string name="deck_copied_format">%1$s copied to clipboard!</string>
    <string name="action_edit">Edit deck</string>
    <string name="action_finish_edit">Finish editing</string>
    <string name="welcome_text">View and manage your collection of Pokémon Trading Card Game decks from here. No longer do you need to sort and display your cards to get or show your full deck list</string>
    <string name="deck_quickstart_message">Add a new deck to begin building.</string>
    <string name="action_add">Add</string>
    <string name="action_remove">Remove</string>
    <string name="empty_search_pokemon_message">Enter a term to begin searching for Pokémon cards</string>
    <string name="empty_search_trainer_message">Enter a term to begin searching for Trainer cards</string>
    <string name="empty_search_energy_message">Enter a term to begin searching for Energy cards</string>
    <string name="empty_search_results_pokemon_message">Couldn\'t find any Pokémon cards for that term</string>
    <string name="empty_search_results_trainer_message">Couldn\'t find any Trainer cards for that term</string>
    <string name="empty_search_results_energy_message">Couldn\'t find any Energy cards for that term</string>
    <string name="filter_header_search_field">Search field</string>
    <string name="activity_missing_cards">Report Missing Card</string>
    <string name="hint_missing_card_name">Pokémon card name</string>
    <string name="hint_missing_card_description">Description</string>
    <string name="hint_missing_card_set_number">Set #</string>
    <string name="action_send">Send</string>
    <string name="missing_card_report_submitted">Missing card report submitted! Thanks!</string>
    <string name="pref_help_missing_card_title">Missing card?</string>
    <string name="pref_help_missing_card_summary">Report a missing card in the collection</string>
    <string name="empty_search_missing_card">Missing card?</string>
    <string name="error_anonymous_signin">Uknown error when trying to sign-in anonymously. Please try again later.</string>
    <string name="activity_multi_export">Export</string>
    <string name="tab_export_tournament">Tournament</string>
    <string name="tab_export_ptcgo">PTCGO</string>
    <string name="hint_player_name">Player name</string>
    <string name="hint_player_id">Player ID</string>
    <string name="hint_date_of_birth">Date of birth</string>
    <string name="subheader_age_division">Age division</string>
    <string name="age_division_junior">Junior (born in %d or later)</string>
    <string name="age_division_senior">Senior (born in %1$d – %2$d)</string>
    <string name="age_division_masters">Masters (born in %d or earlier)</string>
    <string name="subheader_format">Format</string>
    <string name="tournament_pdf_title"><![CDATA[Pokémon TCG Tournament Deck List]]></string>
    <string name="tournament_pdf_format_title">Format: </string>
    <string name="tournament_pdf_format_standard">Standard</string>
    <string name="tournament_pdf_format_expanded">Expanded</string>
    <string name="tournament_pdf_player_name">Player Name:</string>
    <string name="tournament_pdf_player_id">Player ID:</string>
    <string name="tournament_pdf_player_dob">Date of Birth (MM/DD/YYYY): </string>
    <string name="action_dismiss">Dismiss</string>
    <string name="tab_all">All</string>
    <string name="empty_set_browse_message">No cards found for this set.</string>
    <string name="deck_image_picker_title">Pick deck image</string>
    <string name="action_select">Select</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_test">Test deck</string>
    <string name="collection_migration_title">Migration needed</string>
    <string name="collection_migration_message">Due to a change in how your collection counts are stored and you\'ll need to migrate to the new format to keep your collection intact.</string>
    <string name="action_migrate">Migrate</string>
    <string name="collection_migration_loading_message">Migrating your collection…</string>
</resources>