<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingTop="@dimen/padding_normal"
        android:paddingBottom="@dimen/padding_normal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputPlayerNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:hint="@string/hint_player_name"
            android:focusedByDefault="false"
            app:counterEnabled="true"
            app:counterMaxLength="50">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputPlayerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Drew Heavner"
                />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_tiny">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputPlayerIdLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_player_id"
                android:layout_marginEnd="@dimen/margin_tiny">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/inputPlayerId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="numberSigned"
                    android:digits="0123456789"

                    tools:text="123456789"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputDateOfBirthLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/margin_tiny"
                android:hint="@string/hint_date_of_birth">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/inputDateOfBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="5/11/1990"
                    android:inputType="date"
                    />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/black12"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingStart="@dimen/padding_normal"
            android:paddingEnd="@dimen/padding_normal"
            android:gravity="center_vertical"
            android:text="@string/subheader_age_division"
            android:fontFamily="sans-serif-medium"
            />

        <RadioGroup
            android:id="@+id/optionsAgeDivision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small">

            <RadioButton
                android:id="@+id/optionAgeDivisionJunior"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingStart="@dimen/padding_small"
                android:paddingEnd="@dimen/padding_small"
                android:text="@string/age_division_junior"
                />

            <RadioButton
                android:id="@+id/optionAgeDivisionSenior"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingStart="@dimen/padding_small"
                android:paddingEnd="@dimen/padding_small"
                android:text="@string/age_division_senior"
                />

            <RadioButton
                android:id="@+id/optionAgeDivisionMasters"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingStart="@dimen/padding_small"
                android:paddingEnd="@dimen/padding_small"
                android:text="@string/age_division_masters"
                />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_tiny"
            android:background="@color/black12"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingStart="@dimen/padding_normal"
            android:paddingEnd="@dimen/padding_normal"
            android:gravity="center_vertical"
            android:text="@string/subheader_format"
            android:fontFamily="sans-serif-medium"
            />

        <RadioGroup
            android:id="@+id/optionsFormat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small">

            <RadioButton
                android:id="@+id/optionFormatStandard"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingStart="@dimen/padding_small"
                android:paddingEnd="@dimen/padding_small"
                android:text="@string/format_standard"
                />

            <RadioButton
                android:id="@+id/optionFormatExpanded"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingStart="@dimen/padding_small"
                android:paddingEnd="@dimen/padding_small"
                android:text="@string/format_expanded"
                />

        </RadioGroup>

    </LinearLayout>

</ScrollView>