<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@drawable/dr_smup_toolbar_background"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            >

            <com.ftinc.kit.widget.AspectRatioImageView
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@drawable/smup_logo"
                android:layout_gravity="center_horizontal"
                />

        </android.support.v7.widget.Toolbar>

        <android.support.v4.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@color/white"
            >

            <android.support.design.widget.TabItem
                android:id="@+id/tabAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tab_all"
                />

            <android.support.design.widget.TabItem
                android:id="@+id/tabPokemon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tab_pokemon"
                />

            <android.support.design.widget.TabItem
                android:id="@+id/tabTrainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tab_trainer"
                />

            <android.support.design.widget.TabItem
                android:id="@+id/tabEnergy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tab_energy"
                />

        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />

    <com.ftinc.kit.widget.EmptyView
        android:id="@+id/emptyView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/padding_giant"
        android:paddingEnd="@dimen/padding_giant"

        app:emptyMessage="@string/empty_set_browse_message"
        app:emptyIcon="@drawable/ic_empty_cards"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />

</android.support.design.widget.CoordinatorLayout>