<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="4dp"
    app:cardCornerRadius="@dimen/card_radius"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/collection_migration_title"
            />

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/collection_migration_message"
            android:textColor="?android:textColorSecondary"
            />

        <LinearLayout
            android:id="@+id/loadingIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|start"
            android:visibility="gone"
            tools:visibility="visible"
            >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/collection_migration_loading_message"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/design_default_color_error"
            android:visibility="gone"
            tools:visibility="visible"
            tools:text="Something went wrong"
            />

        <LinearLayout
            android:id="@+id/actionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            >

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/actionMigrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/action_migrate"
                />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/actionDismiss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_dismiss"
                />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
