<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    >

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/actions"
        />

    <FrameLayout
        android:id="@+id/actions"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        >

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/action_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/action_skip"
            android:textColor="@color/white54"
            />

        <com.r0adkll.deckbuilder.arch.ui.widgets.DotPageIndicator
            android:id="@+id/indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/action_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:text="@string/action_next"
            android:textColor="@color/white"
            android:drawableEnd="@drawable/ic_chevron_right_white_24dp"
            />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/action_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:text="@string/action_finish"
            android:textColor="@color/white"
            android:visibility="gone"
            />

    </FrameLayout>

</RelativeLayout>
