<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical|start"
        android:paddingStart="20sp"
        android:paddingEnd="20sp"

        android:text="@string/deck_image_picker_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        />

    <View
        android:id="@+id/topDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black12"
        android:alpha="0"
        tools:alpha="1"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/padding_small"
        android:clipToPadding="false"
        />

    <View
        android:id="@+id/bottomDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black12"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end|center_vertical"
        android:padding="@dimen/padding_small">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/actionCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_cancel"
            />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/actionSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_select"
            android:enabled="false"
            />

    </LinearLayout>

</LinearLayout>